# project_complete

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: model_config.yaml
data/golden_set/: golden.json
docs/: LGPD_PLAN.md  MODEL_CARD.md  OWASP_MAPPING.md  RED_TEAM_REPORT.md  ROADMAP_2_DIAS.md  SYSTEM_CARD.md
evaluation/: llm_judge.py  ragas_eval.py
notebooks/: 01_eda.ipynb
src/agent/: rag_pipeline.py  react_agent.py  tools.py
src/data/: generate_synthetic.py
src/features/: feature_engineering.py
src/models/: baseline.py  train.py
src/monitoring/: drift.py
src/security/: guardrails.py
src/serving/: app.py
tests/: conftest.py  test_api.py  test_features.py  test_guardrails.py  test_models.py  test_smoke.py
