[project]
name = "datathon-fase05"
version = "0.1.0"
description = "Datathon FIAP Fase 05 — LLMs e Agentes — solução em 2 dias"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Datathon Team" }]

dependencies = [
    # Dados e ML clássico
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "pandera>=0.20",
    "faker>=30.0",
    # Configuração e validação
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    # Tracking e governança
    "mlflow>=2.16",
    # LLM e agente (Anthropic como default; troque por openai se preferir)
    "anthropic>=0.40",
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-community>=0.3",
    # RAG
    "qdrant-client>=1.12",
    "sentence-transformers>=3.0",
    "langchain-qdrant>=0.2",
    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    # Avaliação
    "ragas>=0.2",
    "datasets>=3.0",
    # Observabilidade
    "langfuse>=2.50",
    "evidently>=0.4.40",
    "prometheus-client>=0.21",
    # Segurança
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.11",
    "bandit>=1.7",
    "pre-commit>=4.0",
    "ipykernel>=6.29",
    "jupyterlab>=4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ---------- Ferramentas ----------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "ANN", "S", "RET", "SIM"]
ignore = ["ANN101", "ANN102", "S101", "S301"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S"]
"src/data/generate_synthetic.py" = ["S311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "slow: testes lentos (> 5s)",
    "integration: testes de integração que requerem serviços externos",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "src/data/generate_synthetic.py",
    "src/models/train.py",
    "src/agent/react_agent.py",
    "evaluation/ragas_eval.py",
    "evaluation/llm_judge.py",
    "src/monitoring/drift.py",
]

[tool.bandit]
exclude_dirs = ["tests", "notebooks"]
